fix correct margin values to align social-icons in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,9 +47,9 @@ footer {
   /* background: red;*/
 }
 
-footer div {
+/* footer div {
   padding: 10px;
-}
+} */
 
 ul {
   list-style-type: none;
@@ -126,7 +126,6 @@ a:visited {
   }
 
   .social-icons * {
-    margin: 0 10%;
+    /* margin: 0 2%; */
   }
 }
-
